Bug 442827 - Crop tool's "Applies to" option changes unexpectedly
Summary: Crop tool's "Applies to" option changes unexpectedly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-09-23 07:09 UTC by tomtomtomreportingin
Modified: 2021-09-26 13:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-09-23 07:09:29 UTC
SUMMARY
The crop tool's "Applies to" option has strange behavior regarding what it's set to, switching between the Image or Layer setting when switching to other tools and back, or when switching to other documents and back.

STEPS TO REPRODUCE
1. Select Freehand Brush tool.
2. Select Crop tool. Observe what the "Applies to" option is set to.
3. Select Freehand Brush tool again.
4. Select Crop tool again. Observe what the "Applies to" option is set to.

OBSERVED RESULT
The option has alternated between being Image or Layer. Similar behavior can be observed when switching documents. A hypothetical doc1.kra could have the option set to Image, but switching to doc2.kra and back to doc1.kra will have the option set to Layer.

EXPECTED RESULT
The option should stay at what it's been set to.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.12.11 (Appimage)
Comment 1 tomtomtomreportingin 2021-09-23 07:39:18 UTC
Also, it seems for this bug to start occurring, "Applies to" needs to be manually set to Layer or some other option that's not Image, which is probably why this hasn't been noticed much.
Comment 2 tomtomtomreportingin 2021-09-25 23:33:27 UTC
I am marking this as a regression as it doesn't seem to occur in 4.4.7. Perhaps notably the other options "Canvas" and "Frame" are new as of 5.0.
Comment 3 wolthera 2021-09-26 13:24:58 UTC
Git commit ef9473246fbd9960c0308e3dadb0e8a7c66d7ac8 by Wolthera van Hövell tot Westerflier.
Committed on 26/09/2021 at 13:24.
Pushed by woltherav into branch 'krita/5.0'.

Fix reading of crop tool type from the settings.

Frame and layer were impossible to read :|

M  +1    -1    plugins/tools/tool_crop/kis_tool_crop.cc

https://invent.kde.org/graphics/krita/commit/ef9473246fbd9960c0308e3dadb0e8a7c66d7ac8
Comment 4 wolthera 2021-09-26 13:25:13 UTC
Git commit 6ca8d7bcc24eb53a4cd47a78a323b8ddc4cfaae8 by Wolthera van Hövell, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 26/09/2021 at 13:25.
Pushed by woltherav into branch 'master'.

Fix reading of crop tool type from the settings.

Frame and layer were impossible to read :|


(cherry picked from commit ef9473246fbd9960c0308e3dadb0e8a7c66d7ac8)

M  +1    -1    plugins/tools/tool_crop/kis_tool_crop.cc

https://invent.kde.org/graphics/krita/commit/6ca8d7bcc24eb53a4cd47a78a323b8ddc4cfaae8