Fix reading of crop tool type from the settings.

Frame and layer were impossible to read :|

BUG:442827


(cherry picked from commit ef9473246fbd9960c0308e3dadb0e8a7c66d7ac8)